dataRetrieval 2.7.21
===================
* Added read_waterdata_field_measurements to access new USGS water data API.
* Added deprecation warning to readNWISgwl and readNWISmeas.

dataRetrieval 2.7.20
===================
* Added id transformation to read_waterdata to match other functions
* Cleaned up time arguments in waterdata functions to allow flexible time zones
* Added read_waterdata_metadata, read_waterdata_parameter_codes
* Fixes a bug caused by httr2 update

dataRetrieval 2.7.19
===================
* Added read_waterdata_daily, read_waterdata_monitoring_location, read_waterdata_ts_meta to access
new USGS web services.
* Added whisker and sf as dependencies.
* Renamed read_USGS_samples to read_waterdata_samples.
* Renamed summarize_USGS_samples to summarize_waterdata_samples.
* Added warning to setAccess for non-public endpoints.

dataRetrieval 2.7.18
===================
* Switched from httr to httr2
* Added a way to include a custom user-agent suffix via an enviornmental variable "CUSTOM_DR_UA"
* Added function for USGS discrete data samples_data service: read_USGS_samples
* Restructured stateCdLookup and countyCdLookup to use web services that only
list states and counties that have water quality data.

dataRetrieval 2.7.17
===================
* Fixed bug with server problems causing errors.
* Removed the function "readNWISqw" since the underlying data was removed.
* Added message of service URL.
* Removed the forced "empty returns" for WQP, since the WQP now has properly formatted empty returns.
* Moved the column parsing to a dedicated function for WQP.
* Took out zip option for WQP calls, they are not allowed on WQP anymore.
* Added deprecated message getQuerySummary. Users should use readWQPsummary instead.
* Added WQX 3.0 profiles.
* siteInfo attribute for WQP queries converted to a full station return.
* Cleaned up date conversion in WQP