@@ -39,7 +39,7 @@ bibentry(bibtype = "Manual",
   title = "dataRetrieval: R packages for discovering and retrieving water data available from U.S. federal hydrologic web services",
   publisher = "U.S. Geological Survey",
   address="Reston, VA",
-  version = "2.7.20",
+  version = "2.7.21",
   institution = "U.S. Geological Survey",
   year = 2025,
   doi = "10.5066/P9X4L3GE",
