@@ -391,6 +391,16 @@ coordinate_datum_codes <- read_waterdata_metadata("coordinate-datum-codes")
 coordinate_method_codes <- read_waterdata_metadata("coordinate-method-codes")
 ```
 
+### Hydrologic Unit Codes
+
+`r dataRetrieval:::get_description("hydrologic-unit-codes")`
+
+```{r}
+#| eval: false
+huc_codes <- read_waterdata_metadata("hydrologic-unit-codes")
+```
+
+
 ### Medium Codes
 
 `r dataRetrieval:::get_description("medium-codes")`
