@@ -2,6 +2,8 @@ dataRetrieval 2.7.21
 ===================
 * Added read_waterdata_field_measurements to access new USGS water data API.
 * Added deprecation warning to readNWISgwl and readNWISmeas.
+* Added parent_time_series_id to read_waterdata_ts_meta.
+* Updated some documentation.
 
 dataRetrieval 2.7.20
 ===================
